--- a/lib/betting_system_web/templates/user_session/new.html.heex
+++ b/lib/betting_system_web/templates/user_session/new.html.heex
@@ -3,12 +3,12 @@
   class="h-[100vh] w-[100vw] bg-[#071C27] relative border flex flex-col justify-center items-center  border-transparent text-white"
   style="z-index:2;"
 >
-  <p class="glow">WELCOME TO SPORTODDS</p>
+  <p class="glow hidden md:contents">WELCOME TO SPORTODDS</p>
   <p class="poppins-regular text-3xl mb-6">LOGIN TO YOU ACCOUNT</p>
 
   <div
     id="registrationForm"
-    class=" bg-[#E5F2FC] flex flex-col     rounded-2xl  h-[55%] w-[35%] p-4"
+    class=" bg-[#E5F2FC] flex flex-col  gap-4 m-4  rounded-2xl h-[55%] w-auto md:h-[55%] md:w-[35%] p-4"
   >
     <.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
       <%= if @error_message do %>
@@ -40,7 +40,7 @@
         <%= label(f, :remember_me, "Keep me logged in for 60 days") %>
         <%= checkbox(f, :remember_me) %>
       </div>
-      <div class=" inline-block p-1 ml-[150px] px-6 bg-[#00A8FA]  rounded ">
+      <div class=" inline-block p-1 ml-[30%] md:ml-[150px] px-6 bg-[#00A8FA]  rounded ">
         <%= submit("Log in") %>
       </div>
     </.form>
