--- a/lib/betting_system_web/live/game_live/index.html.heex
+++ b/lib/betting_system_web/live/game_live/index.html.heex
@@ -12,18 +12,25 @@
     />
   </.modal>
 <% end %>
-<div class = "absolute top-[120px] right-[20px]"></div>
-<div style ="z-index:8;" class ="relative pt-[7px]  flex justify-evenly  w-[120px] h-[40px] bg-[#0097E1]">
-<div>  <%= Heroicons.icon("bookmark",
-            type: "solid",
-            class: "h-6  text-white font-bold w-6"
-          ) %></div>
-<div>
-<span class ="poppins-regular te
-xt-base text-white align-top uppercase"> betslip</span>
-<div class = "fixed top-0 left-0 h-[15px] w-[15px] bg-yellow-500 ">3</div>
-</div>
-
+<div class="absolute top-[120px] right-[20px]">
+  <div
+    style="z-index:8;"
+    class="md:hidden relative pt-[7px]  flex justify-evenly  w-[120px] h-[40px] bg-[#0097E1]"
+  >
+    <div>
+      <%= Heroicons.icon("bookmark",
+        type: "solid",
+        class: "h-6  text-white font-bold w-6"
+      ) %>
+    </div>
+    <div>
+      <span class="poppins-regular te
+xt-base text-white align-top uppercase">betslip</span>
+      <div class="absolute flex justify-center items-center top-[3px] left-[8px] h-[15px] w-[15px] pl-[2px] pb-[2px] rounded-full bg-yellow-500 text-sm ">
+        <%= @length_bet %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="main-div h-[100vh] flex relative flex-row gap-2 pt-4 
@@ -187,7 +194,7 @@ xt-base text-white align-top uppercase"> betslip</span>
         </div>
       <% end %>
     </div>
-    <%= if @bets != [] do %>
+    <%= if length(@bets) > 0 do %>
       <div class="bet-details-div h-[40%] text-[#8A92AB]">
         <div class="flex justify-between p-2">
           <p>balance</p>
