--- a/lib/betting_system_web/live/game_live/index.html.heex
+++ b/lib/betting_system_web/live/game_live/index.html.heex
@@ -195,7 +195,7 @@ xt-base text-white align-top uppercase">betslip</span>
       <% end %>
     </div>
     <%= if length(@bets) > 0 do %>
-      <div class="bet-details-div h-[40%] text-[#8A92AB]">
+      <div class="bet-details-div poppins-bold h-[40%] text-[#8A92AB]">
         <div class="flex justify-between p-2">
           <p>balance</p>
           <p>1000000</p>
