--- a/lib/betting_system_web/live/game_live/index.html.heex
+++ b/lib/betting_system_web/live/game_live/index.html.heex
@@ -151,7 +151,7 @@ xt-base text-white align-top uppercase">betslip</span>
   </div>
   <div
     id="betdetailsDiv"
-    class=" hidden md:block betslip-div  bg-blue-[#141C33] w-[30%] h-[100vh] text-white"
+    class=" hidden md:block betslip-div  bg-blue-[#141C33]  w-auto md:w-[30%] h-[100vh] text-white"
   >
     <div class="h-[45%] overflow-y-auto">
       <div class="w-[full] bg-[#202A39] p-2">
