--- a/lib/betting_system_web/live/sport_live/index.html.heex
+++ b/lib/betting_system_web/live/sport_live/index.html.heex
@@ -12,10 +12,16 @@
   </.modal>
 <% end %>
 
-<div class="flex flex-col   w-[98%] gap-2">
+<div class="flex flex-col w-auto  md:w-[98%] gap-2">
   <div class="flex flex-col gap-1">
     <div class="flex flex-row items-end p-2 justify-between w-[100%]">
-      <div></div>
+      <div class=" md:hidden " id="sidebar" onclick="toggleSidebar()">
+        <%= Heroicons.icon("bars-3",
+          type: "solid",
+          class: "h-8  text-[#8A92AB] font-bold w-8"
+        ) %>
+      </div>
+
       <%= live_patch(to: Routes.sport_index_path(@socket, :new)) do %>
         <button class="bg-green-500 flex gap-2 items-center text-white  rounded-md p-2">
           <%= Heroicons.icon("plus",
@@ -26,8 +32,8 @@
       <% end %>
     </div>
   </div>
-  <div class="bg-[#202941] text-white h-[50vh]  rounded-xl p-4 ">
-    <table class="w-[100%]">
+  <div class="bg-[#202941] text-white m-2 h-[50vh]  rounded-xl p-2 md:p-4 ">
+    <table class=" p-2 w-auto md:w-[100%]">
       <thead class="border-b-2 poppins-regular border-black">
         <tr>
           <th class="p-2 font-semibold ">image</th>
@@ -46,17 +52,17 @@
             class="border-b-[1px] cursor-pointer text-center hover:bg-blue-100/50 transition-all ease-in-out duration-500  border-black"
             id={"sport-#{sport.id}"}
           >
-            <td class="p-2">
+            <td class="text-sm md:text-base p-2">
               <div class="flex fex-col justify-center items-center">
                 <img src="/images/champe_no_bc.png" class="w-[50px] h-[50px] object-cover " />
               </div>
             </td>
-            <td><%= sport.name %></td>
+            <td class="text-sm md:text-base "><%= sport.name %></td>
 
-            <td><%= sport.description %></td>
+            <td class="text-sm md:text-base"><%= sport.description %></td>
 
-            <td>
-              <%= if sport.active == "Active" do %>
+            <td class="text-sm md:text-base">
+              <%= if sport.active == "active" do %>
                 <span class="bg-green-500 text-white rounded-md p-1">
                   <%= sport.active %>
                 </span>
@@ -67,13 +73,13 @@
               <% end %>
             </td>
 
-            <td>
+            <td class="text-sm md:text-base ">
               <div class="flex flex-row gap-2 justify-center items-center">
                 <div>
                   <%= live_redirect(to: Routes.sport_show_path(@socket, :show, sport)) do %>
                     <%= Heroicons.icon("eye",
                       type: "solid",
-                      class: "h-6  group-hover:text-green-600 text-green-400 w-6"
+                      class: "h-4 md:h-6  group-hover:text-green-600 text-green-400 w-4 md:w-6"
                     ) %>
                   <% end %>
                 </div>
@@ -82,7 +88,7 @@
                   <%= live_patch(to: Routes.sport_index_path(@socket, :edit, sport)) do %>
                     <%= Heroicons.icon("pencil",
                       type: "solid",
-                      class: "h-6  group-hover:text-blue-600 text-blue-400 w-6"
+                      class: "h-4 md:h-6  group-hover:text-blue-600 text-blue-400 w-4 md:w-6"
                     ) %>
                   <% end %>
                 </div>
@@ -96,7 +102,7 @@
                   )  do %>
                     <%= Heroicons.icon("trash",
                       type: "solid",
-                      class: "h-6  group-hover:text-red-600 text-red-400 w-6"
+                      class: "h-4 md:h-6  group-hover:text-red-600 text-red-400 w-4 md:w-6"
                     ) %>
                   <% end %>
                 </div>
