--- a/lib/betting_system_web/live/user_live/index.html.heex
+++ b/lib/betting_system_web/live/user_live/index.html.heex
@@ -15,7 +15,7 @@
   <div class="flex flex-col   w-[98%] gap-2">
     <div class="flex flex-col gap-1">
       <div class="flex flex-row items-end p-2 justify-between w-[100%]">
-        <div class=" md:hidden " id="sidebar">
+        <div class=" md:hidden " id="sidebar" onclick="toggleSidebar()">
           <%= Heroicons.icon("bars-3",
             type: "solid",
             class: "h-8  text-[#8A92AB] font-bold w-8"
